# ecomVue

./: .gitignore  directros.txt  hudai.py
backend/: pyproject.toml
backend/blackerraid/: manage.py
backend/blackerraid/blackerraid/: asgi.py  settings.py  urls.py  wsgi.py
backend/blackerraid/blackerraidapp/: admin.py  apps.py  models.py  serializers.py  views.py
backend/blackerraid/blackerraidapp/migrations/: 0001_initial.py  0002_auto_20221002_1832.py  0002_auto_20230108_1701.py  0002_auto_20230320_0328.py  0003_auto_20221117_2156.py  0003_auto_20230109_1752.py  0003_auto_20230320_0332.py  0004_auto_20230110_1902.py
frontend/blackerraid/: package-lock.json  package.json  tailwind.config.cjs  vite.config.js.timestamp-1662988934068.mjs
frontend/blackerraid/src/routes/: +page.svelte
frontend/blackerraid/src/stores/: moviestore.js
oop overview/: .wolf5448sRNzLjrdzPO5.py  asfasf.py  database.py  hudai.py  nee.py  okey.py  operations.py  populate.py  startProgram.py  ticketss.py  tt.py
oop overview/travellers/: main.py
sveltefront/blackerraid/: package-lock.json  package.json
sveltefront/blackerraid/src/routes/: +page.svelte
sveltefront/blackerraid/src/routes/shop/: +page.server.js  +page.svelte
vanila/blacker-raid/blacker-raid/: index.html  package-lock.json  package.json  style.css
vueFront/blackerraid/: index.html  package-lock.json  package.json  tailwind.config.cjs
vueFront/blackerraid/src/: App.vue  main.js  style.css
vueFront/blackerraid/src/router/: index.js
vueFront/blackerraid/src/views/: Movies.vue  Register.vue  Soon.vue
